# LLM-football-simulation-engine

./: .gitignore  README.md  pyproject.toml
data/: small_sample.csv  small_sample.json
data/small/: 15946.csv  15956.csv
src/: create_ft_data.py  create_sample.py  data_exploration.py  plot_events.py  test_parquet.py
src/eval/: generated_events.csv  generated_simulation.txt  generation_vis.py  loss_vis.py  metricized_eval.ipynb  parsed_gt.json  parsed_predictions.json  sim_eval.ipynb
src/eval/sim/: plot_events.py
src/ray/: create_ft_data.py  pod.yaml  ray_job.py  test.py
src/training/: eval.ipynb  main.ipynb
src/training/adapter/: adapter_config.json
src/training/outputs/: outputs_Mistral-7B-sim-qlora.json
