[tool.poetry]
name = "llm-football-simulation-engine"
version = "0.1.0"
description = ""
authors = ["cemrtkn <cemrtkn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mplsoccer = "^1.4.0"
tqdm = "^4.67.1"
pyarrow = "^19.0.1"
ipynb = "^0.5.1"
ipykernel = "^6.29.5"
dotenv = "^0.9.9"
scikit-learn = "^1.6.1"
huggingface-hub = "^0.32.0"
ipywidgets = "^8.1.7"
